# ThesisCode

./: README.md
Dataset_selection/: DatasetForThesis.py  InitialParseOfDataset.py  SampleDatasetForMPI.py
MPI_model/data/trained_models/: 07_7params.csv  07_7states.csv  07_7trans.csv
MPI_model/src/: ParameterSearch.cpp  diffusion.cpp  main.cpp
MPI_model2/src/: CMakeLists.txt  diffusion.h
nlopt/: config.status  libnlopt_cxx.la  libtool  nlopt.pc
nlopt/.libs/: libnlopt_cxx.0.dylib  libnlopt_cxx.lai
nlopt/api/.deps/: deprecated.Plo  f77api.Plo  general.Plo  optimize.Plo  options.Plo
nlopt/auglag/.deps/: auglag.Plo
nlopt/bobyqa/.deps/: bobyqa.Plo
nlopt/cdirect/.deps/: cdirect.Plo  hybrid.Plo
nlopt/cobyla/.deps/: cobyla.Plo
nlopt/crs/.deps/: crs.Plo
nlopt/direct/.deps/: DIRect.Plo  DIRserial.Plo  DIRsubrout.Plo  direct_wrap.Plo
nlopt/esch/.deps/: esch.Plo
nlopt/isres/.deps/: isres.Plo
nlopt/luksan/: plis.c
nlopt/luksan/.deps/: mssubs.Plo  plip.Plo  plis.Plo  pnet.Plo  pssubs.Plo
nlopt/mlsl/.deps/: mlsl.Plo
nlopt/mma/.deps/: ccsa_quadratic.Plo  mma.Plo
nlopt/neldermead/.deps/: nldrmd.Plo  sbplx.Plo
nlopt/newuoa/.deps/: newuoa.Plo
nlopt/octave/: dummy
nlopt/octave/.deps/: dummy.Po
nlopt/praxis/.deps/: praxis.Plo
nlopt/slsqp/.deps/: slsqp.Plo
nlopt/stogo/.deps/: global.Plo  linalg.Plo  local.Plo  stogo.Plo  tools.Plo
nlopt/swig/: _nlopt.la
nlopt/swig/.deps/: _nlopt_la-nlopt-python.Plo
nlopt/test/: testopt
nlopt/test/.deps/: testfuncs.Po  testopt.Po
nlopt/test/.libs/: testopt
nlopt/util/: redblack_test
(+8 files in other folders)
